# textProcess

./: .gitignore  CHANGELOG.md  GITIGNORE_GUIDE.md  LICENSE  README.md  STARTUP_GUIDE.md  check_deps.py  main.py  migration_config.json  pdf_to_md.py  pyproject.toml  requirements.txt  simple_test.py  test_api.py  test_force_ocr.py  test_gpu_usage_monitor.py  test_pdf_conversion.py  test_port.py
.cursor/rules/: riper-5.mdc
api/: models.py  new_models.py  routes.py  routes_v2.py
api/services/: __init__.py  config_service.py
core/: config.py  converter.py  scan_converter.py
docs/: API接口文档.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DashScope服务接口文档.md  LLM功能使用指南.md  Windows环境Poetry指南.md  gpu_cuda.txt  migration_guide.md  performance_report.md  技术文档.md  设计方案.md  部署指南.md
outputs/d3ec44a5-3d6a-4d37-82c8-ea1c7336d17c/: d3ec44a5-3d6a-4d37-82c8-ea1c7336d17c_testpdf.md
scan_pdf_ocr/: __init__.py  document_analyzer.py  language_detector.py  scan_config.py  scan_pdf_ocr.py
static/: app.js  index.html  style.css  test_gpu_frontend.html
static/js/: config-manager.js
utils/: __init__.py  config_adapter.py  config_compatibility.py  config_factory.py  config_migrator.py  file_handler.py  ocr_engine.py  progress.py
