[project]
name = "pdf-converter"
version = "0.1.0"
description = "PDF转Markdown工具 - 基于marker库的Web界面"
authors = [
    {name = "GeorgeHit"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-converter"
version = "0.1.0"
description = "PDF转Markdown工具 - 基于marker库的Web界面"
authors = ["GeorgeHit"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marker-pdf = {extras = ["full"], version = "^1.8.2"}
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pymupdf = "^1.23.0"
pytesseract = "^0.3.10"
langdetect = "^1.0.9"
psutil = "^7.0.0"
click = "^8.2.1"
rich = "^14.0.0"
pyyaml = "^6.0.2"
dashscope = "^1.24.0"
reportlab = "^4.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31.0"

[tool.poetry.scripts]
pdf-converter = "main:main"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
