[project]
name = "pdf-converter"
version = "0.1.0"
description = "PDF转Markdown工具 - 基于marker库的Web界面"
authors = [
    {name = "GeorgeHit"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "marker-pdf[full]>=1.8.2,<2.0.0",
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "psutil>=7.0.0,<8.0.0",
    "click>=8.2.1,<9.0.0",
    "rich>=14.0.0,<15.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "dashscope>=1.24.0,<2.0.0",
    "reportlab>=4.4.3,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.scripts]
pdf-converter = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
